; ModuleID = '/home/carl/AnghaBench/php-src/ext/soap/extr_php_encoding.c_soap_add_xml_ref.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/soap/extr_php_encoding.c_soap_add_xml_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ref_map = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64)* @soap_add_xml_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @soap_add_xml_ref(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i32, i32* @ref_map, align 4
  %6 = call i64 @SOAP_GLOBAL(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = load i32, i32* @ref_map, align 4
  %10 = call i64 @SOAP_GLOBAL(i32 %9)
  %11 = load i64, i64* %4, align 8
  %12 = trunc i64 %11 to i32
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @zend_hash_index_update(i64 %10, i32 %12, i32* %13)
  br label %15

15:                                               ; preds = %8, %2
  ret void
}

declare dso_local i64 @SOAP_GLOBAL(i32) #1

declare dso_local i32 @zend_hash_index_update(i64, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
